few changes in telemetry data

--- a/f1_data_2022.ipynb
+++ b/f1_data_2022.ipynb
@@ -955,6 +955,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laps_lec = race.laps.pick_driver('LEC').pick_fastest()\n",
+    "telemetry_lec = laps_max.get_telemetry().add_distance()\n",
+    "speed_lec = telemetry_lec.Speed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -994,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (main, Dec 19 2022, 17:35:49) [GCC 12.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
