sector 1 of VER

--- a/bahrain_2023.ipynb
+++ b/bahrain_2023.ipynb
@@ -444,7 +444,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ver_laps = race.laps.pick_driver(\"VER\")\n",
+    "ver_sector1 = ver_laps['SpeedI1'].dropna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(ver_sector1,label=\"Ver\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
