alonso lap data

--- a/bahrain_2023.ipynb
+++ b/bahrain_2023.ipynb
@@ -458,6 +458,26 @@
     "plt.plot(ver_sector1,label=\"Ver\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alo_laps = race.laps.pick_driver(\"ALO\")\n",
+    "alo_sector1 = alo_laps['SpeedI1'].dropna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(alo_sector1,label=\"Alo\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
